corrects scrollspy flickering by temporarily disabling scrollspy

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,16 +11,17 @@ body
   .container, .jumbotron
     position: relative
     z-index: 0
-    &:after
-      content: ""
-      background: image-url("noise.png")
-      opacity: 0.1
-      position: fixed
-      top: 0
-      left: 0
-      bottom: 0
-      right: 0
-      z-index: -1
+    background-color: transparent
+  &:after
+    content: ""
+    background: image-url("noise.png")
+    opacity: 0.1
+    position: fixed
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+    z-index: -1
 
 .jumbotron
   #logo
@@ -57,9 +58,11 @@ body
   text-align: center
   i.fa
     font-size: 10em
-
+.sidebar-nav
+  position: relative
 .sidenav
   &.affix
+    position: fixed
     top: 0
 
 section
